force-app/main/default/objects/FunctionReference__mdt/FunctionReference__mdt.object-meta.xml
<CustomObject>
    <label>Function Reference</label>
    <pluralLabel>Function References</pluralLabel>
</CustomObject>