force-app/main/default/objects/FunctionReference__mdt/fields/APIVersion__c.field-meta.xml
<CustomField>
    <fullName>APIVersion__c</fullName>
    <defaultValue>&quot;57.0&quot;</defaultValue>
    <label>APIVersion</label>
    <length>10</length>
    <type>Text</type>
</CustomField>