force-app/main/default/objects/FunctionReference__mdt/fields/Certificate__c.field-meta.xml
<CustomField>
    <fullName>Certificate__c</fullName>
    <defaultValue>&quot;Functions_Cert&quot;</defaultValue>
    <label>Certificate</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>