force-app/main/default/objects/FunctionReference__mdt/fields/ConsumerKey__c.field-meta.xml
<CustomField>
    <fullName>ConsumerKey__c</fullName>
    <label>ConsumerKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>