force-app/main/default/objects/FunctionReference__mdt/fields/PermissionSetOrGroup__c.field-meta.xml
<CustomField>
    <fullName>PermissionSetOrGroup__c</fullName>
    <label>PermissionSetOrGroup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>